Fix rendering on firefox

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,4 +24,5 @@
 
 .fit-content {
   width: fit-content !important;
+  max-width: max-content !important;
 }
